--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       </div>
 
       <div class="register-link">
-        <p>New to Netflix? <a href="#">Sign up now</a></p>
+        <p style ="text-align: left;>New to Netflix? <a href="#">Sign up now</a></p>
       </div>
     </form>
   </div>
